trabajo/sintactico.output
State 90 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: ε

    2 program: $@1 "id" "(" ")" "{" declarations statement_list "}"

    3 $@2: ε

    4 declarations: declarations "var" $@2 identifier_list ";"

    5 $@3: ε

    6 declarations: declarations "const" $@3 identifier_list ";"
    7             | ε

    8 identifier_list: identifier
    9                | identifier_list "," identifier

   10 identifier: "id"
   11           | "id" "=" expression

   12 statement_list: statement_list statement
   13               | ε

   14 assignment: "id" "=" expression

   15 statement: assignment ";"
   16          | "{" statement_list "}"
   17          | "if" "(" expr_rel ")" statement "else" statement
   18          | "if" "(" expr_rel ")" statement
   19          | "while" "(" expr_rel ")" statement
   20          | "print" "(" print_list ")" ";"
   21          | "read" "(" read_list ")" ";"
   22          | "do" "{" statement_list "}" "while" "(" expr_rel ")" ";"
   23          | "for" "(" assignment ";" expr_rel ";" assignment ")" "{" statement_list "}"
   24          | error ";"

   25 print_list: print_item
   26           | print_list "," print_item

   27 expr_rel: expression "<" expression
   28         | expression ">" expression
   29         | expression "==" expression
   30         | expression "!=" expression
   31         | expression "<=" expression
   32         | expression ">=" expression
   33         | expression

   34 print_item: expression
   35           | "string"

   36 read_list: "id"
   37          | read_list "," "id"

   38 expression: expression "+" expression
   39           | expression "-" expression
   40           | expression "*" expression
   41           | expression "/" expression
   42           | "-" expression
   43           | "(" expression ")"
   44           | "id"
   45           | "numero"


Terminals, with rules where they appear

    $end (0) 0
    error (256) 24
    "id" <cadena> (258) 2 10 11 14 36 37 44
    "var" (259) 4
    "const" (260) 6
    "print" (261) 20
    "if" (262) 17 18
    "else" (263) 17
    "read" (264) 21
    "while" (265) 19 22
    "+" (266) 38
    "-" (267) 39 42
    "," (268) 9 26 37
    "*" (269) 40
    "/" (270) 41
    "(" (271) 2 17 18 19 20 21 22 23 43
    ")" (272) 2 17 18 19 20 21 22 23 43
    "{" (273) 2 16 22 23
    "}" (274) 2 16 22 23
    "numero" <cadena> (275) 45
    ";" (276) 4 6 15 20 21 22 23 24
    "string" <cadena> (277) 35
    "=" (278) 11 14
    "for" (279) 23
    "do" (280) 22
    "<" (281) 27
    ">" (282) 28
    "<=" (283) 31
    ">=" (284) 32
    "==" (285) 29
    "!=" (286) 30
    UMINUS (287)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    program (34)
        on left: 2
        on right: 0
    $@1 (35)
        on left: 1
        on right: 2
    declarations <codigo> (36)
        on left: 4 6 7
        on right: 2 4 6
    $@2 (37)
        on left: 3
        on right: 4
    $@3 (38)
        on left: 5
        on right: 6
    identifier_list <codigo> (39)
        on left: 8 9
        on right: 4 6 9
    identifier <codigo> (40)
        on left: 10 11
        on right: 8 9
    statement_list <codigo> (41)
        on left: 12 13
        on right: 2 12 16 22 23
    assignment <codigo> (42)
        on left: 14
        on right: 15 23
    statement <codigo> (43)
        on left: 15 16 17 18 19 20 21 22 23 24
        on right: 12 17 18 19
    print_list <codigo> (44)
        on left: 25 26
        on right: 20 26
    expr_rel <codigo> (45)
        on left: 27 28 29 30 31 32 33
        on right: 17 18 19 22 23
    print_item <codigo> (46)
        on left: 34 35
        on right: 25 26
    read_list <codigo> (47)
        on left: 36 37
        on right: 21 37
    expression <codigo> (48)
        on left: 38 39 40 41 42 43 44 45
        on right: 11 14 27 28 29 30 31 32 33 34 38 39 40 41 42 43


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 • "id" "(" ")" "{" declarations statement_list "}"

    "id"  shift, and go to state 4


State 3

    0 $accept: program $end •

    $default  accept


State 4

    2 program: $@1 "id" • "(" ")" "{" declarations statement_list "}"

    "("  shift, and go to state 5


State 5

    2 program: $@1 "id" "(" • ")" "{" declarations statement_list "}"

    ")"  shift, and go to state 6


State 6

    2 program: $@1 "id" "(" ")" • "{" declarations statement_list "}"

    "{"  shift, and go to state 7


State 7

    2 program: $@1 "id" "(" ")" "{" • declarations statement_list "}"

    $default  reduce using rule 7 (declarations)

    declarations  go to state 8


State 8

    2 program: $@1 "id" "(" ")" "{" declarations • statement_list "}"
    4 declarations: declarations • "var" $@2 identifier_list ";"
    6             | declarations • "const" $@3 identifier_list ";"

    "var"    shift, and go to state 9
    "const"  shift, and go to state 10

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 11


State 9

    4 declarations: declarations "var" • $@2 identifier_list ";"

    $default  reduce using rule 3 ($@2)

    $@2  go to state 12


State 10

    6 declarations: declarations "const" • $@3 identifier_list ";"

    $default  reduce using rule 5 ($@3)

    $@3  go to state 13


State 11

    2 program: $@1 "id" "(" ")" "{" declarations statement_list • "}"
   12 statement_list: statement_list • statement

    error    shift, and go to state 14
    "id"     shift, and go to state 15
    "print"  shift, and go to state 16
    "if"     shift, and go to state 17
    "read"   shift, and go to state 18
    "while"  shift, and go to state 19
    "{"      shift, and go to state 20
    "}"      shift, and go to state 21
    "for"    shift, and go to state 22
    "do"     shift, and go to state 23

    assignment  go to state 24
    statement   go to state 25


State 12

    4 declarations: declarations "var" $@2 • identifier_list ";"

    "id"  shift, and go to state 26

    identifier_list  go to state 27
    identifier       go to state 28


State 13

    6 declarations: declarations "const" $@3 • identifier_list ";"

    "id"  shift, and go to state 26

    identifier_list  go to state 29
    identifier       go to state 28


State 14

   24 statement: error • ";"

    ";"  shift, and go to state 30


State 15

   14 assignment: "id" • "=" expression

    "="  shift, and go to state 31


State 16

   20 statement: "print" • "(" print_list ")" ";"

    "("  shift, and go to state 32


State 17

   17 statement: "if" • "(" expr_rel ")" statement "else" statement
   18          | "if" • "(" expr_rel ")" statement

    "("  shift, and go to state 33


State 18

   21 statement: "read" • "(" read_list ")" ";"

    "("  shift, and go to state 34


State 19

   19 statement: "while" • "(" expr_rel ")" statement

    "("  shift, and go to state 35


State 20

   16 statement: "{" • statement_list "}"

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 36


State 21

    2 program: $@1 "id" "(" ")" "{" declarations statement_list "}" •

    $default  reduce using rule 2 (program)


State 22

   23 statement: "for" • "(" assignment ";" expr_rel ";" assignment ")" "{" statement_list "}"

    "("  shift, and go to state 37


State 23

   22 statement: "do" • "{" statement_list "}" "while" "(" expr_rel ")" ";"

    "{"  shift, and go to state 38


State 24

   15 statement: assignment • ";"

    ";"  shift, and go to state 39


State 25

   12 statement_list: statement_list statement •

    $default  reduce using rule 12 (statement_list)


State 26

   10 identifier: "id" •
   11           | "id" • "=" expression

    "="  shift, and go to state 40

    $default  reduce using rule 10 (identifier)


State 27

    4 declarations: declarations "var" $@2 identifier_list • ";"
    9 identifier_list: identifier_list • "," identifier

    ","  shift, and go to state 41
    ";"  shift, and go to state 42


State 28

    8 identifier_list: identifier •

    $default  reduce using rule 8 (identifier_list)


State 29

    6 declarations: declarations "const" $@3 identifier_list • ";"
    9 identifier_list: identifier_list • "," identifier

    ","  shift, and go to state 41
    ";"  shift, and go to state 43


State 30

   24 statement: error ";" •

    $default  reduce using rule 24 (statement)


State 31

   14 assignment: "id" "=" • expression

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expression  go to state 48


State 32

   20 statement: "print" "(" • print_list ")" ";"

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47
    "string"  shift, and go to state 49

    print_list  go to state 50
    print_item  go to state 51
    expression  go to state 52


State 33

   17 statement: "if" "(" • expr_rel ")" statement "else" statement
   18          | "if" "(" • expr_rel ")" statement

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expr_rel    go to state 53
    expression  go to state 54


State 34

   21 statement: "read" "(" • read_list ")" ";"

    "id"  shift, and go to state 55

    read_list  go to state 56


State 35

   19 statement: "while" "(" • expr_rel ")" statement

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expr_rel    go to state 57
    expression  go to state 54


State 36

   12 statement_list: statement_list • statement
   16 statement: "{" statement_list • "}"

    error    shift, and go to state 14
    "id"     shift, and go to state 15
    "print"  shift, and go to state 16
    "if"     shift, and go to state 17
    "read"   shift, and go to state 18
    "while"  shift, and go to state 19
    "{"      shift, and go to state 20
    "}"      shift, and go to state 58
    "for"    shift, and go to state 22
    "do"     shift, and go to state 23

    assignment  go to state 24
    statement   go to state 25


State 37

   23 statement: "for" "(" • assignment ";" expr_rel ";" assignment ")" "{" statement_list "}"

    "id"  shift, and go to state 15

    assignment  go to state 59


State 38

   22 statement: "do" "{" • statement_list "}" "while" "(" expr_rel ")" ";"

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 60


State 39

   15 statement: assignment ";" •

    $default  reduce using rule 15 (statement)


State 40

   11 identifier: "id" "=" • expression

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expression  go to state 61


State 41

    9 identifier_list: identifier_list "," • identifier

    "id"  shift, and go to state 26

    identifier  go to state 62


State 42

    4 declarations: declarations "var" $@2 identifier_list ";" •

    $default  reduce using rule 4 (declarations)


State 43

    6 declarations: declarations "const" $@3 identifier_list ";" •

    $default  reduce using rule 6 (declarations)


State 44

   44 expression: "id" •

    $default  reduce using rule 44 (expression)


State 45

   42 expression: "-" • expression

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expression  go to state 63


State 46

   43 expression: "(" • expression ")"

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expression  go to state 64


State 47

   45 expression: "numero" •

    $default  reduce using rule 45 (expression)


State 48

   14 assignment: "id" "=" expression •
   38 expression: expression • "+" expression
   39           | expression • "-" expression
   40           | expression • "*" expression
   41           | expression • "/" expression

    "+"  shift, and go to state 65
    "-"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 14 (assignment)


State 49

   35 print_item: "string" •

    $default  reduce using rule 35 (print_item)


State 50

   20 statement: "print" "(" print_list • ")" ";"
   26 print_list: print_list • "," print_item

    ","  shift, and go to state 69
    ")"  shift, and go to state 70


State 51

   25 print_list: print_item •

    $default  reduce using rule 25 (print_list)


State 52

   34 print_item: expression •
   38 expression: expression • "+" expression
   39           | expression • "-" expression
   40           | expression • "*" expression
   41           | expression • "/" expression

    "+"  shift, and go to state 65
    "-"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 34 (print_item)


State 53

   17 statement: "if" "(" expr_rel • ")" statement "else" statement
   18          | "if" "(" expr_rel • ")" statement

    ")"  shift, and go to state 71


State 54

   27 expr_rel: expression • "<" expression
   28         | expression • ">" expression
   29         | expression • "==" expression
   30         | expression • "!=" expression
   31         | expression • "<=" expression
   32         | expression • ">=" expression
   33         | expression •
   38 expression: expression • "+" expression
   39           | expression • "-" expression
   40           | expression • "*" expression
   41           | expression • "/" expression

    "+"   shift, and go to state 65
    "-"   shift, and go to state 66
    "*"   shift, and go to state 67
    "/"   shift, and go to state 68
    "<"   shift, and go to state 72
    ">"   shift, and go to state 73
    "<="  shift, and go to state 74
    ">="  shift, and go to state 75
    "=="  shift, and go to state 76
    "!="  shift, and go to state 77

    $default  reduce using rule 33 (expr_rel)


State 55

   36 read_list: "id" •

    $default  reduce using rule 36 (read_list)


State 56

   21 statement: "read" "(" read_list • ")" ";"
   37 read_list: read_list • "," "id"

    ","  shift, and go to state 78
    ")"  shift, and go to state 79


State 57

   19 statement: "while" "(" expr_rel • ")" statement

    ")"  shift, and go to state 80


State 58

   16 statement: "{" statement_list "}" •

    $default  reduce using rule 16 (statement)


State 59

   23 statement: "for" "(" assignment • ";" expr_rel ";" assignment ")" "{" statement_list "}"

    ";"  shift, and go to state 81


State 60

   12 statement_list: statement_list • statement
   22 statement: "do" "{" statement_list • "}" "while" "(" expr_rel ")" ";"

    error    shift, and go to state 14
    "id"     shift, and go to state 15
    "print"  shift, and go to state 16
    "if"     shift, and go to state 17
    "read"   shift, and go to state 18
    "while"  shift, and go to state 19
    "{"      shift, and go to state 20
    "}"      shift, and go to state 82
    "for"    shift, and go to state 22
    "do"     shift, and go to state 23

    assignment  go to state 24
    statement   go to state 25


State 61

   11 identifier: "id" "=" expression •
   38 expression: expression • "+" expression
   39           | expression • "-" expression
   40           | expression • "*" expression
   41           | expression • "/" expression

    "+"  shift, and go to state 65
    "-"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 11 (identifier)


State 62

    9 identifier_list: identifier_list "," identifier •

    $default  reduce using rule 9 (identifier_list)


State 63

   38 expression: expression • "+" expression
   39           | expression • "-" expression
   40           | expression • "*" expression
   41           | expression • "/" expression
   42           | "-" expression •

    $default  reduce using rule 42 (expression)


State 64

   38 expression: expression • "+" expression
   39           | expression • "-" expression
   40           | expression • "*" expression
   41           | expression • "/" expression
   43           | "(" expression • ")"

    "+"  shift, and go to state 65
    "-"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68
    ")"  shift, and go to state 83


State 65

   38 expression: expression "+" • expression

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expression  go to state 84


State 66

   39 expression: expression "-" • expression

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expression  go to state 85


State 67

   40 expression: expression "*" • expression

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expression  go to state 86


State 68

   41 expression: expression "/" • expression

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expression  go to state 87


State 69

   26 print_list: print_list "," • print_item

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47
    "string"  shift, and go to state 49

    print_item  go to state 88
    expression  go to state 52


State 70

   20 statement: "print" "(" print_list ")" • ";"

    ";"  shift, and go to state 89


State 71

   17 statement: "if" "(" expr_rel ")" • statement "else" statement
   18          | "if" "(" expr_rel ")" • statement

    error    shift, and go to state 14
    "id"     shift, and go to state 15
    "print"  shift, and go to state 16
    "if"     shift, and go to state 17
    "read"   shift, and go to state 18
    "while"  shift, and go to state 19
    "{"      shift, and go to state 20
    "for"    shift, and go to state 22
    "do"     shift, and go to state 23

    assignment  go to state 24
    statement   go to state 90


State 72

   27 expr_rel: expression "<" • expression

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expression  go to state 91


State 73

   28 expr_rel: expression ">" • expression

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expression  go to state 92


State 74

   31 expr_rel: expression "<=" • expression

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expression  go to state 93


State 75

   32 expr_rel: expression ">=" • expression

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expression  go to state 94


State 76

   29 expr_rel: expression "==" • expression

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expression  go to state 95


State 77

   30 expr_rel: expression "!=" • expression

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expression  go to state 96


State 78

   37 read_list: read_list "," • "id"

    "id"  shift, and go to state 97


State 79

   21 statement: "read" "(" read_list ")" • ";"

    ";"  shift, and go to state 98


State 80

   19 statement: "while" "(" expr_rel ")" • statement

    error    shift, and go to state 14
    "id"     shift, and go to state 15
    "print"  shift, and go to state 16
    "if"     shift, and go to state 17
    "read"   shift, and go to state 18
    "while"  shift, and go to state 19
    "{"      shift, and go to state 20
    "for"    shift, and go to state 22
    "do"     shift, and go to state 23

    assignment  go to state 24
    statement   go to state 99


State 81

   23 statement: "for" "(" assignment ";" • expr_rel ";" assignment ")" "{" statement_list "}"

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expr_rel    go to state 100
    expression  go to state 54


State 82

   22 statement: "do" "{" statement_list "}" • "while" "(" expr_rel ")" ";"

    "while"  shift, and go to state 101


State 83

   43 expression: "(" expression ")" •

    $default  reduce using rule 43 (expression)


State 84

   38 expression: expression • "+" expression
   38           | expression "+" expression •
   39           | expression • "-" expression
   40           | expression • "*" expression
   41           | expression • "/" expression

    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 38 (expression)


State 85

   38 expression: expression • "+" expression
   39           | expression • "-" expression
   39           | expression "-" expression •
   40           | expression • "*" expression
   41           | expression • "/" expression

    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 39 (expression)


State 86

   38 expression: expression • "+" expression
   39           | expression • "-" expression
   40           | expression • "*" expression
   40           | expression "*" expression •
   41           | expression • "/" expression

    $default  reduce using rule 40 (expression)


State 87

   38 expression: expression • "+" expression
   39           | expression • "-" expression
   40           | expression • "*" expression
   41           | expression • "/" expression
   41           | expression "/" expression •

    $default  reduce using rule 41 (expression)


State 88

   26 print_list: print_list "," print_item •

    $default  reduce using rule 26 (print_list)


State 89

   20 statement: "print" "(" print_list ")" ";" •

    $default  reduce using rule 20 (statement)


State 90

   17 statement: "if" "(" expr_rel ")" statement • "else" statement
   18          | "if" "(" expr_rel ")" statement •

    "else"  shift, and go to state 102

    "else"    [reduce using rule 18 (statement)]
    $default  reduce using rule 18 (statement)


State 91

   27 expr_rel: expression "<" expression •
   38 expression: expression • "+" expression
   39           | expression • "-" expression
   40           | expression • "*" expression
   41           | expression • "/" expression

    "+"  shift, and go to state 65
    "-"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 27 (expr_rel)


State 92

   28 expr_rel: expression ">" expression •
   38 expression: expression • "+" expression
   39           | expression • "-" expression
   40           | expression • "*" expression
   41           | expression • "/" expression

    "+"  shift, and go to state 65
    "-"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 28 (expr_rel)


State 93

   31 expr_rel: expression "<=" expression •
   38 expression: expression • "+" expression
   39           | expression • "-" expression
   40           | expression • "*" expression
   41           | expression • "/" expression

    "+"  shift, and go to state 65
    "-"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 31 (expr_rel)


State 94

   32 expr_rel: expression ">=" expression •
   38 expression: expression • "+" expression
   39           | expression • "-" expression
   40           | expression • "*" expression
   41           | expression • "/" expression

    "+"  shift, and go to state 65
    "-"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 32 (expr_rel)


State 95

   29 expr_rel: expression "==" expression •
   38 expression: expression • "+" expression
   39           | expression • "-" expression
   40           | expression • "*" expression
   41           | expression • "/" expression

    "+"  shift, and go to state 65
    "-"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 29 (expr_rel)


State 96

   30 expr_rel: expression "!=" expression •
   38 expression: expression • "+" expression
   39           | expression • "-" expression
   40           | expression • "*" expression
   41           | expression • "/" expression

    "+"  shift, and go to state 65
    "-"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 30 (expr_rel)


State 97

   37 read_list: read_list "," "id" •

    $default  reduce using rule 37 (read_list)


State 98

   21 statement: "read" "(" read_list ")" ";" •

    $default  reduce using rule 21 (statement)


State 99

   19 statement: "while" "(" expr_rel ")" statement •

    $default  reduce using rule 19 (statement)


State 100

   23 statement: "for" "(" assignment ";" expr_rel • ";" assignment ")" "{" statement_list "}"

    ";"  shift, and go to state 103


State 101

   22 statement: "do" "{" statement_list "}" "while" • "(" expr_rel ")" ";"

    "("  shift, and go to state 104


State 102

   17 statement: "if" "(" expr_rel ")" statement "else" • statement

    error    shift, and go to state 14
    "id"     shift, and go to state 15
    "print"  shift, and go to state 16
    "if"     shift, and go to state 17
    "read"   shift, and go to state 18
    "while"  shift, and go to state 19
    "{"      shift, and go to state 20
    "for"    shift, and go to state 22
    "do"     shift, and go to state 23

    assignment  go to state 24
    statement   go to state 105


State 103

   23 statement: "for" "(" assignment ";" expr_rel ";" • assignment ")" "{" statement_list "}"

    "id"  shift, and go to state 15

    assignment  go to state 106


State 104

   22 statement: "do" "{" statement_list "}" "while" "(" • expr_rel ")" ";"

    "id"      shift, and go to state 44
    "-"       shift, and go to state 45
    "("       shift, and go to state 46
    "numero"  shift, and go to state 47

    expr_rel    go to state 107
    expression  go to state 54


State 105

   17 statement: "if" "(" expr_rel ")" statement "else" statement •

    $default  reduce using rule 17 (statement)


State 106

   23 statement: "for" "(" assignment ";" expr_rel ";" assignment • ")" "{" statement_list "}"

    ")"  shift, and go to state 108


State 107

   22 statement: "do" "{" statement_list "}" "while" "(" expr_rel • ")" ";"

    ")"  shift, and go to state 109


State 108

   23 statement: "for" "(" assignment ";" expr_rel ";" assignment ")" • "{" statement_list "}"

    "{"  shift, and go to state 110


State 109

   22 statement: "do" "{" statement_list "}" "while" "(" expr_rel ")" • ";"

    ";"  shift, and go to state 111


State 110

   23 statement: "for" "(" assignment ";" expr_rel ";" assignment ")" "{" • statement_list "}"

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 112


State 111

   22 statement: "do" "{" statement_list "}" "while" "(" expr_rel ")" ";" •

    $default  reduce using rule 22 (statement)


State 112

   12 statement_list: statement_list • statement
   23 statement: "for" "(" assignment ";" expr_rel ";" assignment ")" "{" statement_list • "}"

    error    shift, and go to state 14
    "id"     shift, and go to state 15
    "print"  shift, and go to state 16
    "if"     shift, and go to state 17
    "read"   shift, and go to state 18
    "while"  shift, and go to state 19
    "{"      shift, and go to state 20
    "}"      shift, and go to state 113
    "for"    shift, and go to state 22
    "do"     shift, and go to state 23

    assignment  go to state 24
    statement   go to state 25


State 113

   23 statement: "for" "(" assignment ";" expr_rel ";" assignment ")" "{" statement_list "}" •

    $default  reduce using rule 23 (statement)
